# nodex

./: .env.example  .env.sample  .gitignore  .releaserc.json  .releaserc_bump_up.json  .releaserc_publish.json  .taplo.toml  .typos.toml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Doxyfile  LICENSE-THIRD-PARTY.md  Makefile  README.md  clippy.toml  commitlint.config.js  index.html  index.js  jest.config.js  nodex-agent.deb  package.json  rust-toolchain  rust-toolchain.toml  sbom-nodex.spdx  sbom-unid.spdx  test_update.sh  tsconfig.json
.bin/: check-coverage.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_binary_assets.yml  bump-version.yml  codeql-analysis.yml  create-tag-pipeline.yml  default-pipeline.yml  publish-pipeline.yml  release-drafter.yml  release-pipeline.yml  release.yml  rust-check.yml  rust-format.yml  rust.yml  rust2.yml  sign.yml
__tests__/: cipherTests.spec.ts  hasherTests.spec.ts  signerTests.spec.ts  tests.spec.ts
agent/: Cargo.toml
agent/src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  network.rs  server.rs
agent/src/controllers/: errors.rs  mod.rs
agent/src/controllers/internal/: network.rs  version.rs
agent/src/controllers/public/: mod.rs  nodex_create_didcomm_message.rs  nodex_create_identifier.rs  nodex_create_verifiable_message.rs  nodex_find_identifier.rs  nodex_receive.rs  nodex_verify_didcomm_message.rs  nodex_verify_verifiable_message.rs  send_attribute.rs  send_attributes.rs  send_custom_metric.rs  send_event.rs  send_log.rs  utils.rs
agent/src/handlers/: mod.rs  receiver.rs
agent/src/nodex/: mod.rs
agent/src/nodex/extension/: secure_keystore.rs
agent/src/nodex/keyring/: keypair.rs
agent/src/nodex/utils/: did_accessor.rs  mock_webvh_resover.rs  mod.rs  sidetree_client.rs  studio_client.rs  webvh_client.rs
agent/src/repository/: attribute_repository.rs  custom_metric_repository.rs  did_repository.rs  event_repository.rs  log_repository.rs  message_activity_repository.rs  metric_repository.rs  mod.rs
agent/src/services/: mod.rs  nodex.rs  studio.rs
agent/src/usecase/: custom_metric_usecase.rs  didcomm_message_usecase.rs  event_usecase.rs  metric_usecase.rs  mod.rs  verifiable_message_usecase.rs
bindings/renesas/: renesas_ra6m3.json
build_resource/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu
c_libraries/crypto/: list.txt
controller/: Cargo.toml  build.rs
controller/src/: config.rs  lib.rs  runtime.rs  unix_utils.rs
controller/src/managers/: agent.rs  file_storage.rs  mmap_storage.rs  mod.rs  resource.rs  runtime.rs  unix_process_manager.rs  windows_process_manager.rs
controller/src/process/: agent.rs  mod.rs  runtime.rs  systemd.rs
controller/src/state/: handler.rs  idle.rs  manager.rs  mod.rs  resource.rs
controller/src/state/default/: mod.rs
controller/src/state/init/: mod.rs
controller/src/state/rollback/: mod.rs
controller/src/state/update/: mod.rs
controller/src/state/update/tasks/: mod.rs  move_resource.rs  update_json.rs
controller/src/state/updating/: mod.rs
controller/src/state/updating/action/: mod.rs  move_action.rs  move_resource.rs  update_json.rs
controller/src/state/updating/actions/: command.rs  mod.rs  move_action.rs  update_json.rs
controller/src/validator/: agent.rs  mod.rs  network.rs  process.rs  sigstore.rs  storage.rs  systemd.rs
e2e/: Cargo.toml
e2e/src/common/: http.rs  mod.rs  platform_client.rs
e2e/tests/: test_didcomm_message.rs  test_verifiable_message.rs
examples/nodejs/: README.md  package-lock.json  package.json
examples/python/: README.md  requirements.txt
examples/systemd/: nodex.service  systemd_daemon.md
includes/: libunid.h
nodex/: nodex-agent.bundle
omnibus/: .kitchen.yml  Dockerfile  Gemfile  README.md  omnibus.rb
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/cbor/: mod.rs  sign.rs  signature.rs  types.rs
protocol/src/did/: did_repository.rs  mod.rs
protocol/src/did/sidetree/: client.rs  mod.rs  multihash.rs  payload.rs
protocol/src/did_webvh/: mod.rs
protocol/src/did_webvh/domain/: did.rs  did_document.rs  did_log_entry.rs  mod.rs
protocol/src/did_webvh/domain/crypto/: crypto_utils.rs  hash.rs  mod.rs
protocol/src/did_webvh/infra/: did_webvh_data_store.rs  did_webvh_data_store_trait.rs  mod.rs
protocol/src/did_webvh/service/: mod.rs  service_impl.rs
protocol/src/did_webvh/service/controller/: controller_service.rs  did_webvh_controller_service.rs  mod.rs
protocol/src/did_webvh/service/resolver/: mod.rs  resolver_service.rs
protocol/src/didcomm/: encrypted.rs  mod.rs  sign_encrypt.rs  types.rs
protocol/src/keyring/: jwk.rs  keypair.rs  mod.rs
protocol/src/keyring/extension/: mod.rs  trng.rs
protocol/src/verifiable_credentials/: credential_signer.rs  did_vc.rs  jws.rs  mod.rs  types.rs
protocol/test_resources/: collect_didcomm_message.json  did.jsonl  invalid_didcomm_message.json
protocol/tests/: did_webvh_test.rs
src/: allocator.rs  config.rs  ffi.rs  handler.rs  lib.rs  logger.rs  main.rs  network.rs  server.rs  unid.rs  utils.rs
src/bindings/: mod.rs
src/cipher/: cipher.rs  hasher.rs  mod.rs  signer.rs
src/ciphers/: cipher.rs  hasher.rs  mod.rs  signer.rs
src/controllers/: mod.rs
src/core/: document.rs  mod.rs  operator.rs  payload.rs
src/did_unid/: did.rs  keyring.rs  mnemonic.rs  mod.rs  secp256k1.rs
src/handlers/: heartbeat.rs  mod.rs  receiver.rs  sender.rs
src/nodex/: mod.rs
src/repository/: attribute_repository.rs  custom_metric_repository.rs  did_repository.rs  event_repository.rs  message_activity_repository.rs  metric_repository.rs  mod.rs
src/runtime/: bip32.rs  bip39.rs  mod.rs  (+1 more)
test_resource/: compose.yaml  create-certs.sh  did_sidetree.yaml  e2e_tests_with_docker.md  studio.yaml  systemd_daemon_usage.md  test_update.sh
test_resource/mock_studio/: Cargo.toml  Dockerfile
test_resource/mock_studio/src/: handler.rs  main.rs  model.rs
test_resources/: api.yaml  compose.yaml
unid-node-wallet-sdk/: .env.example  .gitignore  CHANGELOG.md  README.md  jest.config.js  package.json  tsconfig.json
(+394 files in other folders)
