[package]
authors = { workspace = true }
build = "build.rs"
edition = { workspace = true }
name = "agent"
version = { workspace = true }

[[bin]]
name = "nodex-agent"
path = "src/main.rs"

[dependencies]
actix-rt = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.19", features = ["cargo", "derive"] }
cuid = { workspace = true }
dirs = "5.0.1"
dotenvy = "0.15.7"
env_logger = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
home-config = { version = "0.6.0", features = ["json", "toml", "yaml"] }
log = { workspace = true }
mac_address = { workspace = true }
protocol = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shadow-rs = "0.35.0"
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
trait-variant = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["signal"] }

[build-dependencies]
shadow-rs = "0.35.0"

[dev-dependencies]
rstest = { workspace = true }
