[package]
authors = { workspace = true }
build = "build.rs"
edition = { workspace = true }
name = "agent"
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
controller = { workspace = true }
cuid = { workspace = true }
dirs = { workspace = true }
dotenvy = "0.15.7"
fs2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
home-config = { version = "0.6.0", features = ["json", "toml", "yaml"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["client"] }
hyper-util = "0.1.10"
log = { workspace = true }
mac_address = { workspace = true }
protocol = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shadow-rs = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.13"
tower = { version = "0.5", features = ["util"] }
trait-variant = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { version = "0.19", features = ["derive"] }
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }

[build-dependencies]
shadow-rs = "0.37.0"

[dev-dependencies]
rstest = { workspace = true }
