[package]
name = "controller"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
fs2 = { workspace = true }
lazy_static = "1.4"
nix = { version = "0.29", features = ["fs", "signal", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }
serde_yaml = "0.9.34"
shadow-rs = { workspace = true }
thiserror = { workspace = true }
glob = "0.3.1"
semver = "1.0.23"
tar = "0.4.43"
flate2 = "1.0.34"
reqwest = { workspace = true }
http-body-util = { version = "0.1" }
hyper = { version = "1.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = [
    "client-legacy",
    "http1",
    "tokio",
] }
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc857" }
zip = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
