[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "controller"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flate2 = "1.0.34"
fs2 = { workspace = true }
glob = "0.3.1"
http-body-util = { version = "0.1" }
hyper = { version = "1.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = [
    "client-legacy",
    "http1",
    "tokio",
] }
lazy_static = "1.4"
log = { workspace = true }
nix = { version = "0.29", features = ["fs", "process", "signal"] }
reqwest = { workspace = true }
semver = "1.0.23"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
shadow-rs = { workspace = true }
tar = "0.4.43"
thiserror = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc857" }
users = "0.11.0"

[build-dependencies]
shadow-rs = { workspace = true }
