[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "controller"
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
flate2 = "1.0.34"
fs2 = { workspace = true }
glob = "0.3.2"
http-body-util = { version = "0.1" }
hyper = { version = "1.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = [
    "client-legacy",
    "http1",
    "tokio",
] }
lazy_static = "1.4"
log = { workspace = true }
nix = { version = "0.29", features = ["feature", "fs", "mman", "process", "signal", "socket", "uio"] }
notify = "7.0.0"
reqwest = { workspace = true }
semver = { version = "1.0.23", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
shadow-rs = { workspace = true }
sigstore = "0.11.0"
tar = "0.4.43"
thiserror = { workspace = true }
tokio = { workspace = true }
trait-variant = { workspace = true }
walkdir = "2.5.0"
x509-cert = "0.2.5"
zip = { workspace = true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc857" }
users = "0.11.0"

[build-dependencies]
shadow-rs = { workspace = true }

[dev-dependencies]
filename = "0.1.1"
filetime = "0.2.25"
httpmock = "0.7.0"
libc = "0.2.167"
mockito = "1.6.1"
serial_test = "3.2.0"
tempfile = "3.15.0"
