[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = { version = "1.0.71" }
anyhow = "1.0"
dirs = "5.0.1"
hex = "0.4"
http-body-util = { version = "0.1" }
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.2", features = [
    "client-legacy",
    "http1",
    "tokio",
] }
tokio = { version = "1.35", features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc857" }
