[package]
edition = "2021"
name = "e2e"
version = "1.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "5.0.1"
http-body-util = { version = "0.1" }
hyper = { version = "1.2", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = [
    "client-legacy",
    "http1",
    "tokio",
] }
serde_json = { version = "1.0.125" }
tokio = { version = "1.36", features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }

[dev-dependencies]
hex = "0.4"

[target.'cfg(unix)'.dependencies]
hyperlocal = { git = "https://github.com/softprops/hyperlocal.git", rev = "34dc857" }
