[package]
authors = { workspace = true }
edition = { workspace = true }
name = "protocol"
version = "0.2.0"

[dependencies]
bs58 = { workspace = true }
chrono = { workspace = true }
const_format = { workspace = true }
cuid = { workspace = true }
data-encoding = { workspace = true }
didcomm-rs = { git = "https://github.com/nodecross/didcomm-rs.git", tag = "v0.8.1", default-features = false, features = [
    "raw-crypto",
] }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
k256 = { workspace = true }
multibase = { workspace = true }
multihash = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_jcs = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
trait-variant = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
validator_derive = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
