[package]
edition = "2021"
name = "mock_studio"
version = "0.1.0"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
protocol = { git = "https://github.com/nodecross/nodex", branch = "fix/didcomm/replace_did_method" }
env_logger = "0.11.8"
wiremock = "0.6.3"
anyhow = "1.0.97"
chrono = "0.4.40"
regex = "1.11.1"
